--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.21.0",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.21.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "remark-math": "https://esm.sh/remark-math@^6.0.0",
     "rehype-katex": "https://esm.sh/rehype-katex@^7.0.1",
